# home-energy-manager

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: clippy.yml  test.yml
backend/: Cargo.toml
backend/crates/domain/src/entity/: history.rs  label.rs  mod.rs  sub_system.rs  unit.rs
backend/crates/domain/src/value_object/: mod.rs
backend/crates/domain/src/value_object/unit/: error.rs  mod.rs  value.rs
backend/crates/infra-db/: Cargo.toml  README.md
backend/crates/infra-db-migration/: Cargo.toml  README.md
backend/crates/infra-db-migration/src/: lib.rs  m20251122_081240_create_histories_table.rs
backend/crates/infra-db-migration/src/iden/generation/: histories.rs  mod.rs
backend/crates/infra-db/src/: connection.rs  error_mapper.rs  errors.rs  lib.rs
backend/crates/infra-db/src/connector/: db.rs
backend/crates/infra-db/src/models/: histories.rs  mod.rs  prelude.rs
backend/crates/infra-db/src/repository/: group.rs  history.rs  label.rs  mod.rs  source.rs  sub_system.rs  unit.rs
backend/crates/infra-db/src/repository/history/: repo.rs
backend/crates/infra-db/src/repository/label/: dto.rs  mod.rs  repo.rs
backend/crates/infra-db/src/repository/sub_system/: repo.rs
backend/crates/infra-db/src/repository/unit/: dto.rs  repo.rs
backend/crates/infra-db/src/unit_of_work/: factory.rs  mod.rs  uow.rs
backend/crates/presentation/: Cargo.toml
backend/crates/presentation/src/: error_mapper.rs  lib.rs
backend/crates/presentation/src/connectors/: db.rs
backend/crates/presentation/src/di/: db.rs
backend/crates/presentation/src/dto/generation/history/: get.rs  post.rs
backend/crates/presentation/src/routers/: mod.rs  root.rs
backend/crates/presentation/src/routers/generation/: history.rs  mod.rs
backend/crates/presentation/src/routers/generation/history/: endpoints.rs  get.rs  post.rs
backend/crates/presentation/src/routers/generation/label/: endpoints.rs  get.rs  mod.rs  post.rs  update.rs
backend/crates/presentation/src/routers/generation/sub_system/: endpoints.rs  get.rs  post.rs
backend/crates/presentation/src/routers/generation/unit/: endpoints.rs  get.rs  mod.rs  post.rs  put.rs
backend/crates/presentation/src/routers/health/: checker.rs  mod.rs
backend/crates/use-case/: Cargo.toml
backend/crates/use-case/src/: error_mapper.rs  lib.rs
backend/crates/use-case/src/generation/create_history/: dto.rs  use_case.rs
backend/crates/use-case/src/generation/history/: create.rs  crud.rs  dto.rs  get.rs
backend/crates/use-case/src/generation/label/: create.rs  crud.rs  dto.rs  get.rs  mod.rs
backend/crates/use-case/src/generation/sub_system/: create.rs  crud.rs  dto.rs  get.rs
backend/crates/use-case/src/generation/unit/: create.rs  crud.rs  dto.rs  get.rs  mod.rs
backend/crates/use-case/src/interface/repository/generation/: errors.rs  history.rs  label.rs  mod.rs  sub_system.rs  unit.rs
backend/crates/use-case/src/interface/unit_of_work/: factory.rs  uow.rs
backend/src/: main.rs
docker/backend/: Dockerfile
docker/backend-dev/: Dockerfile  cmd.sh
docs/: 01_product_requirements.md  02_architecture.md  03_development_guidelines.md  04_software_design.md
frontend/: .cta.json  .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: routeTree.gen.ts  router.tsx  types.d.ts
frontend/src/components/: Header.tsx  HeaderUser.tsx
frontend/src/components/atoms/: Loading.tsx
frontend/src/components/molecules/: Header.tsx  HeaderUser.tsx  index.ts
frontend/src/components/pages/: Configuration.tsx  LogIn.tsx  RootDocument.tsx  Top.tsx  index.ts
frontend/src/components/templates/: TemplateBody.tsx  index.ts
frontend/src/integrations/better-auth/: header-user.tsx
frontend/src/integrations/home-energy-manager/: generation.ts  index.ts  types.d.ts
frontend/src/integrations/home-energy-manager/generation/: index.ts
frontend/src/integrations/tanstack-query/: client-query-provider.tsx  devtools.tsx  index.ts  root-provider.tsx
frontend/src/routes/: __root.tsx  config.tsx  index.tsx  login.tsx
frontend/src/routes/demo/: better-auth.tsx  tanstack-query.tsx
layers/domain/src/entity/: group.rs  label.rs  mod.rs  source.rs
layers/infra-db/: Cargo.toml
layers/infra-db/src/repository/: generation.rs  history.rs  label.rs  unit.rs
layers/infra-db/src/unit_of_work/: factory.rs  mod.rs
layers/presentation/: Cargo.toml
layers/presentation/src/: lib.rs
layers/presentation/src/routers/: mod.rs
layers/presentation/src/routers/generation/: history.rs  mod.rs
layers/presentation/src/routers/health/: checker.rs
layers/presentation/src/routers/swagger/: mod.rs
layers/use-case/: Cargo.toml
layers/use-case/src/generation/: mod.rs
layers/use-case/src/generation/create_history/: mod.rs
layers/use-case/src/generation/record_history/: mod.rs
layers/use-case/src/interface/: mod.rs
layers/use-case/src/interface/repository/generation/: mod.rs  (+5 more)
layers/use-case/src/interface/unit_of_work/: factory.rs
src/: main.rs
(+3 files in other folders)
