[workspace]
members = [".", "layers/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
chrono = "0.4.42"
chrono-tz = "0.10.4"
dotenvy = "0.15"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["redoc", "swagger-ui"] }
tokio = { version = "1.47.2", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["serde", "v4"] }

[package]
name = "study-rust-be"
version.workspace = true
edition.workspace = true

[dependencies]
layer-presentation = { path = "layers/presentation" }
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
poem.workspace = true
poem-openapi.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
debug = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"  # Optimize for size
lto = true  # Enable Link Time Optimization
panic = "abort"  # Abort on panic for smaller binaries
strip = true  # Remove debug symbols
