[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
tokio = { version = "1.47.2", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-redoc = { version = "6.0", features = ["axum"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[package]
name = "home-energy-manager"
version.workspace = true
edition.workspace = true

[dependencies]
layer-presentation = { path = "./crates/presentation" }
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
debug = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"  # Optimize for size
lto = true  # Enable Link Time Optimization
panic = "abort"  # Abort on panic for smaller binaries
strip = true  # Remove debug symbols
