[package]
name = "layer-infra-db"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
layer-domain = { path = "../domain" }
layer-use-case = { path = "../use-case" }
