[package]
name = "layer-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
poem.workspace = true
poem-openapi.workspace = true
sea-orm.workspace = true
serde.workspace = true
tokio.workspace = true

[dependencies.layer-domain]
path = "../domain"

[dependencies.layer-infra-db]
path = "../infra-db"
