[package]
name = "layer-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-redoc.workspace = true

[dependencies.layer-domain]
path = "../domain"

[dependencies.layer-infra-db]
path = "../infra-db"

[dependencies.layer-use-case]
path = "../use-case"
