[package]
name = "layer-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http = "1.4.0"
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = "0.6.8"
tower-http-cors-config = "0.1.3"
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-redoc.workspace = true

[dependencies.layer-infra-db]
path = "../infra-db"

[dependencies.layer-use-case]
path = "../use-case"
